unpackaged/main/default/objects/Opportunity_Item__c/Opportunity_Item__c.object-meta.xml
<CustomObject>
    <description>To relate MyCase Billing Items to Opportunities</description>
    <label>Opportunity Item</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>