unpackaged/main/default/objects/Opportunity_Item__c/fields/Billing_Item__c.field-meta.xml
<CustomField>
    <fullName>Billing_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Item</label>
    <referenceTo>MyCase_Billing_Item__c</referenceTo>
    <relationshipLabel>Opportunity Items</relationshipLabel>
    <relationshipName>Opportunity_Items</relationshipName>
    <type>Lookup</type>
</CustomField>