unpackaged/main/default/objects/Opportunity_Item__c/fields/Update_Processed__c.field-meta.xml
<CustomField>
    <fullName>Update_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Processed</label>
    <type>Checkbox</type>
</CustomField>